Revert "fix: overflow da segunda imagem na parte de salgados"
This reverts commit 1b9bcd0b3b492f908342ccd146c4a62e527ca0d9.

--- a/styles.css
+++ b/styles.css
@@ -273,6 +273,7 @@ main {
 
 .savory-image {
     flex: 1;
+    width: 50%;
     height: auto;
     object-fit: cover;
     border-radius: 20px;
